--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.16",
     "expo-auth-session": "~5.5.2",
     "expo-checkbox": "^3.0.0",
