--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
-    "expo": "~51.0.16",
     "expo-auth-session": "~5.5.2",
     "expo-checkbox": "^3.0.0",
     "expo-constants": "~16.0.2",
@@ -54,6 +53,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
+    "expo": "^51.0.36",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
